# qa05

./: README.md  conftest.py  conftest1.py  git_practice.py  output.json  pyproject.toml  pytetst.ini  test_saucedemo.py
.github/workflows/: action.txt  action.yml
pages/: base_page.py  cart_page.py  inventory_page.py  login_page.py
tests/: test_123.py  test_saucedemo.py  test_saucedemo_POM.py
