[tool.poetry]
name = "sausdemo-05"
version = "0.1.0"
description = ""
authors = ["Eliser14"]
readme = "README.md"
#packages = [{include = "sausdemo_05"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"
black = "^22.10.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
