[tool.poetry]
name = "sausdemo-05"
version = "0.1.0"
description = ""
authors = ["Eliser14"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest-xdist = "^3.0.2"
pytest-order = "^1.0.1"
allure-pytest = "^2.11.1"
allure-combine = "^1.0.8"
pytest-html = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
